2002-04-30  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_addrgroup.c: Run new callback state
	"BkAddrGroupStateSocket" every time a new socket() is created, to
	allow user opportunity to set socket options like multicast and
	broadcast.

	* src/bttcp.c: Enable UDP, multicast, and broadcast support, such
	as it is.

	* lib/b_stdsock.c: Support routines to turn on multicast and
	broadcast abilities for sockets.

2002-04-29  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_ioh.c: Revert "fix" made recently to allow ioh_close's
	on full queues to succeed. Replace with real fix (which is to
	bypass queue full check on commands).

2002-04-26  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h: map O_SYNC->O_FSYNC, O_NONBLOCK->O_NDELAY
	on any OS which feels the need to be different
	
2002-04-26  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_pollio.c (polling_io_ioh_handler): Using [0] to reference
	a pointer which is not in an array is legal but ugly.

	* lib/b_bnbio.c (bk_iohh_bnbio_write): Do at least one poll on
	each write to clean up the state created by the write (under
	normal conditions).

2002-04-26    <seth@luggage>

	* src/bttcp.c (main): Add UDP option, add -c close-after-one
	option, start adding multicsat options, but still need backend
	support

	* lib/b_addrgroup.c: Sanify as destruction--multiple frees allowed.
	Add UDP transmit support (receive support is a bit more tricky)

2002-04-25 Brian Lindauer <lindauer@sysd.com>

	* lib/b_error.c: added bk_error_istrdump to dump errors to string
	* include/libbk.h: same
	
2002-04-18  Seth Robertson  <seth@startide.sysdetect.com>

	* include/libbk_net.h: Internal version of common network headers (struct ip, etc)

2002-04-15  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_bits.c (bk_bitcount): New function to count numbers of
	bits in a word.

2002-04-05  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_memrchr): bounded string [buffer] strrchr
