@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static char libbk__rcsid[] = "$Id: b_string.c,v 1.36 2002/04/05 23:00:17 dupuy Exp $";
+static char libbk__rcsid[] = "$Id: b_string.c,v 1.37 2002/05/01 16:53:13 jtt Exp $";
 static char libbk__copyright[] = "Copyright (c) 2001";
 static char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -1876,4 +1876,109 @@ bk_string_unique_string(bk_s B, char *buf, u_int len, bk_flags flags)
   if (ri)
     bk_rand_destroy(B, ri, 0);
   BK_RETURN(B,-1);  
+}
+
+
+
+
+/**
+ * Convert a string to a double in the BAKA way (ie with copyout)
+ *
+ *	@param B BAKA thread/global state.
+ *	@param string The input string to convert.
+ *	@param value The converted value (only valid if return value is 0).
+ *	@param flags Flags for future use.
+ *	@return <i>-1</i> on failure.<br>
+ *	@return <i>0</i> on success.
+ */
+int
+bk_string_atod(bk_s B, const char *string, double *value, bk_flags flags)
+{
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
+  double tmp;
+  char *end = NULL;
+  int ret = 0;
+  
+  if (!string || !value)
+  {
+    bk_error_printf(B, BK_ERR_ERR,"Illegal arguments\n");
+    BK_RETURN(B, -1);
+  }
+  
+  // Just make sure this is set.
+  *value = 0.0;
+
+  // Set errno, just to be sure.
+  errno = 0;
+  tmp = strtod(string, &end);
+  
+  if (tmp == 0.0)
+  {
+  // Potential error has occured. See strtod man page for expmanations
+    if (!end || string == end || errno)
+    {
+      bk_error_printf(B, BK_ERR_ERR, "Conversion from string to double failed\n");
+      ret = -1;
+    }
+  }
+  else if ((tmp == HUGE_VAL || tmp == -HUGE_VAL) && errno)
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Conversion from string to double failed\n");
+    ret = -1;
+  }
+  // It's unclear to jtt that we need this; it's unclear to seth that we don't. We err on the side of safety.
+  else if (!isfinite(tmp))
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Conversion from string to double failed\n");
+    ret = -1;
+  }
+  else
+  {
+    *value = tmp;
+  }
+
+  BK_RETURN(B,ret);
+}
+
+
+
+
+/**
+ * Convert a string to a float in the BAKA way.
+ *
+ *	@param B BAKA thread/global state.
+ *	@param string The input string to convert.
+ *	@param value The converted value (only valid if return value is 0).
+ *	@param flags Flags for future use.
+ *	@return <i>-1</i> on failure.<br>
+ *	@return <i>0</i> on success.
+ */
+int
+bk_string_atof(bk_s B, const char *string, float *value, bk_flags flags)
+{
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
+  double tmp;
+  int ret = 0;
+
+  if (!string || !value)
+  {
+    bk_error_printf(B, BK_ERR_ERR,"Illegal arguments\n");
+    BK_RETURN(B, -1);
+  }
+
+  if ((ret = bk_string_atod(B, string, &tmp, flags)) < 0)
+  {
+    bk_error_printf(B, BK_ERR_ERR, "Could not convert string to float\n");
+    ret = -1;
+  }
+  else if (tmp < FLT_MIN || tmp > FLT_MAX)
+  {
+    ret = -1;
+  }
+  else
+  {
+    *value = tmp;
+  }
+  
+  BK_RETURN(B,ret);  
 }
